# CogniscientAssistant

./: .ace-fca-testing-protocol.md  .env.example  .gitignore  CLAUDE.md  CLAUDE_OLD.md  CLEANROOM_EXPERIMENT_PLAN.md  DEVELOPMENT.md  IMPLEMENTATION_PLAN.md  INTEGRATION_TESTING_PLAN.md  NEXT_STEPS_ACTION_PLAN.md  README.md  SAFETY_IMPLEMENTATION_APPROACH.md  SCRIPTS.md  SPECS_PLAN.md  SPECS_PLAN_hybrid.md  argo-config.yaml  argo-config.yaml.template  conftest.py  model_compatibility_results.json  model_test_report_20250721_212711.json  optimized_prompt.md  prompt.md  pyproject-modern.toml  pyproject.toml  pyproject.toml.backup  requirements-lock.txt  run-implementation-loop-validated.sh  run-loop.sh  run-spec-loop-improved_hybrid.sh  run-spec-loop.sh  specs-prompt.md  specs-prompt_hybrid.md  upgrade-environment.sh  view-logs.sh
.aicoscientist/safety_logs/: 20250723_010d2884-f5e4-495a-b699-ecb929940008.json  (+671 more)
.archive/: PHASE9_REAL_LLM_TEST_ALIGNMENT_20250722_232845.md
.argoproxy/: config.yaml
baml_client/: __init__.py  async_client.py  async_request.py  inlinedbaml.py  parser.py  partial_types.py  sync_client.py  sync_request.py  type_builder.py  types.py
baml_src/: TEMPLATE.baml  clients-argo.baml  clients.baml  environment.baml  functions.baml  generators.baml  models.baml
config/: __init__.py  logging.py
docs/: ACE-FCA-CONTEXT-OPTIMIZATION.md  ACE_FCA_TOGGLE_DESIGN.md  AI_ASSISTED_DEVELOPMENT_WORKFLOW.md  ARGO_PROXY_PATCH_DOCUMENTATION.md  BAML_MOCKING_GUIDE.md  CONTEXT_OPTIMIZATION_TOGGLE_DESIGN.md  CONTEXT_OPTIMIZATION_USAGE.md  FINAL_MODEL_TESTING_SUMMARY.md  IMPLEMENTATION_LOOP_IMPROVEMENTS.md  MULTI_PROVIDER_API_PLAN.md  WORKFLOW_PROTECTION_SUGGESTIONS.md  ace-fca-integration-plan-2025-09-19.md  ai-assisted-development-insights-2025-09-19.md  argo-gateway-complete-guide.md  argo-proxy-bug-report.md  argo-proxy-setup-guide.md  argo-proxy-setup.md  argo-setup.md  codebase-state-2025-09-19.md  environment-setup.md  model-configuration.md  real-llm-tests.md  test-coverage-strategy.md
scripts/: README-baml-tests.md  README.md  argo-proxy-daemon.sh  argo-proxy-patched.py  argo-proxy.sh  claude-system-only-test.py  compare-hypothesis-quality.py  comprehensive-model-test.py  debug-claude-normalization.py  debug-normalization-flow.py  focused-model-compatibility-test.py  manage-argo-proxy.py  manage-argo-proxy.sh  minimal-baml-test-case.py  mock-argo-proxy.py  quick-model-test.py  run-real-llm-tests.sh  setup-argo-proxy.sh  setup-argo-service.sh  setup-dev.sh  simple-mock-proxy.py  start-argo-proxy.sh  test-baml-alternatives.py  test-baml-models.py  test-claude-peng-fix.py  test-flexible-parsing.py  test-model-config.py  test-o3-baml-config.py  test-what-is-sent.py  validate-after-cleanup.py  validate-before-cleanup.py  validate-critical-functions.py
specs/: 001-system-overview.md  002-core-principles.md  003-research-workflow.md  004-multi-agent-architecture.md  005-supervisor-agent.md  006-task-queue-behavior.md  007-generation-agent.md  008-reflection-agent.md  009-ranking-agent.md  010-evolution-agent.md  011-proximity-agent.md  012-meta-review-agent.md  013-agent-interaction-protocols.md  014-web-search-interface.md  015-context-memory.md  016-external-tools.md  017-natural-language-interface.md  018-expert-intervention-points.md  019-output-formats.md  020-safety-mechanisms.md  021-validation-criteria.md  022-monitoring-logging.md  023-llm-abstraction.md  024-argo-gateway-integration.md  025-deployment-patterns.md  026-temporal-behaviors.md  027-resource-boundaries.md  028-system-states-and-transitions.md  030-baml-enhancements.md
specs-source/: ai-coscientist-blog.md  ai-coscientist-paper.md  guidelines.md
specs_hybrid/: 001-system-overview.md  002-multi-agent-framework.md  003-asynchronous-task-execution-framework.md  004-context-memory-system.md  005-generation-agent.md  006-reflection-agent.md  007-meta-review-agent.md  007-ranking-agent.md  007-tournament-elo-rating.md  008-evolution-agent.md  009-proximity-agent.md  010-expert-in-the-loop-interaction.md  010-supervisor-agent.md  011-natural-language-interface.md  012-tool-integration.md  013-research-goal-configuration.md  014-hypothesis-generation-and-evolution.md  015-review-types-and-processes.md  030-research-proposal-format.md  031-event-storage.md  032-session-management.md  033-research-history-tracking.md  034-safety-mechanisms.md  035-evaluation-metrics.md  036-factuality-grounding.md  037-documentation-architecture.md  038-user-journey-documentation.md  039-api-documentation-strategy.md  040-example-tutorial-planning.md  041-validation-criteria.md  042-reference-test-cases.md  043-simplified-test-cases.md  044-success-metrics.md  045-acceptance-testing.md
test_results/: model_response_format_test.json
tests/: README.md  conftest.py  test_llm_provider.py  test_llm_request_validation.py
(+686 files in other folders)
